VectorBatchSurvey: tweak layout BaseSurveyActivity: adjustments/improvements MainActivity: button for vectory survey VectorSurvey: basic activity and view model

--- a/Android/App/app/src/main/res/values/strings.xml
+++ b/Android/App/app/src/main/res/values/strings.xml
@@ -16,8 +16,11 @@
   <string name="survey_type_avatar">Survey type avatar</string>
   <string name="survey_item_is_flagged">Survey item is flagged</string>
   <string name="survey_item_is_queued_for_upload">Survey item is queued for upload</string>
-  <string name="vector_batch">Vector Batch</string>
+  <string name="add_vector_batch">Add Vector Batch</string>
+  <string name="add_vector">Add Vector</string>
   <string name="action_save">Save</string>
-  <string name="date_format">dd MMMM yyyy</string>
+  <string name="cancel_survey_title">Are you sure you want to cancel?</string>
+  <string name="cancel_survey_rationale">This survey has not been saved...</string>
+  <string name="error_vector_no_batchid">A Vector record requires a vector batch</string>
 
 </resources>
