--- a/Android/App/app/src/main/res/values/strings.xml
+++ b/Android/App/app/src/main/res/values/strings.xml
@@ -16,11 +16,12 @@
   <string name="survey_type_avatar">Survey type avatar</string>
   <string name="survey_item_is_flagged">Survey item is flagged</string>
   <string name="survey_item_is_queued_for_upload">Survey item is queued for upload</string>
-  <string name="add_vector_batch">Add Vector Batch</string>
-  <string name="add_vector">Add Vector</string>
+  <string name="add_vector_batch">Add Mosquito Batch</string>
+  <string name="add_vector">Add Mosquito</string>
+  <string name="add_human">Add Human Record</string>
   <string name="action_save">Save</string>
   <string name="cancel_survey_title">Are you sure you want to cancel?</string>
-  <string name="cancel_survey_rationale">This survey has not been saved...</string>
+  <string name="cancel_survey_rationale">This survey has not been saved…</string>
   <string name="error_vector_no_batchid">A Vector record requires a vector batch</string>
 
 </resources>
