--- a/Android/App/app/src/main/res/values/strings.xml
+++ b/Android/App/app/src/main/res/values/strings.xml
@@ -3,39 +3,65 @@
   <string name="nav_view_header_title">Username</string>
 
   <string name="title_activity_surveys">Surveys</string>
+  <string name="title_vector_batch_detail">Vector Batch Survey</string>
+  <string name="title_vector_detail">Vector Survey</string>
+  <string name="title_human_detail">Patient Survey</string>
+  <string name="title_vector_batch">New Mosquito Batch</string>
+  <string name="title_vector">New Mosquito</string>
+  <string name="title_human">New Patient</string>
 
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
 
-  <string name="action_settings">Settings</string>
-  <string name="action_sign_out">Sign out</string>
   <string name="login_action_sign_in">Sign in</string>
   <string name="login_email_hint">Email address</string>
   <string name="login_password_hint">Password</string>
   <string name="login_title">Sign in to PathogenTracker</string>
+
   <string name="survey_type_avatar">Survey type avatar</string>
   <string name="survey_item_is_flagged">Survey item is flagged</string>
   <string name="survey_item_is_queued_for_upload">Survey item is queued for upload</string>
-  <string name="title_vector_batch">New Mosquito Batch</string>
-  <string name="title_vector">New Mosquito</string>
-  <string name="title_human">New Patient</string>
-  <string name="action_save">Save</string>
   <string name="cancel_survey_title">Are you sure you want to leave?</string>
   <string name="cancel_survey_rationale">This survey has not been saved…</string>
-  <string name="error_vector_no_batchid">A mosquito record requires a mosquito batch</string>
   <string name="specify_species">Please specify</string>
-  <string name="replace_photo">Replace photo</string>
-  <string name="insert_photo">Add a photo</string>
-  <string name="select_photo">Select photo from gallery</string>
-  <string name="take_new_photo">Take new photo</string>
   <string name="survey_photo">Vector Photo</string>
-  <string name="leave">Leave</string>
-  <string name="stay">Stay</string>
-  <string name="notice_saving">Saving. Please wait…</string>
-  <string name="remove">Remove</string>
-  <string name="add_another">Add another</string>
+  <string name="notice_saving">Saving survey…</string>
   <string name="sample_types">Sample type(s)</string>
   <string name="past_infections">Past infection(s)</string>
   <string name="travel_history">Recent travel history</string>
+  <string name="save_success">Successfully saved</string>
+
+  <string name="action_settings">Settings</string>
+  <string name="action_sign_out">Sign out</string>
+  <string name="action_save">Save</string>
+  <string name="action_leave">Leave</string>
+  <string name="action_stay">Stay</string>
+  <string name="action_add_another">Add another</string>
+  <string name="action_replace_photo">Replace photo</string>
+  <string name="action_insert_photo">Add a photo</string>
+
+  <string name="hint_remove">Remove</string>
+  <string name="hint_select_photo">Select photo from gallery</string>
+  <string name="hint_take_new_photo">Take new photo</string>
+
+  <string name="survey_type_select">Select survey type</string>
+  <string name="survey_type_human">Patient Survey</string>
+  <string name="survey_type_vector">Mosquito Survey</string>
+  <string name="survey_vector_item_id">"%1$s - %2$s"</string>
+  <string name="survey_vector_item_species_gender">"%1$s - %2$s"</string>
+
+  <string name="error_no_surveyId">No ID was provided for this record</string>
+  <string name="error_vector_no_batch_record">Unable to load mosquito batch</string>
+  <string name="error_no_primary_activity">No Primary activity specified</string>
+  <string name="title_activity_onboarding">Bienvenue</string>
+  <string name="section_format">Hello World from section: %1$d</string>
+
+  <string name="what_is_primary_activity">Is your primary activity collecting Patient or Mosquito data?</string>
+  <string name="what_is_secondary_activity">Will you also be collecting %1$s data?</string>
+  <string name="permission_location_rationale">In order to improve data accuracy we need permission to access your location</string>
+  <string name="permission_camera_rationale">For Mosquito surveys we need permission to access the Camera and Photos, as well as storage to save new photos</string>
+  <string name="request_permission_location">Allow this app to access device Location</string>
+  <string name="request_permission_camera">Allow this app to access the Camera and save Photos?</string>
+  <string name="dna_field_label">Tap to connect and retrieve</string>
 
 </resources>
