Change location library, remove rxlocation and all reactivex (not using it)

--- a/Android/App/app/src/main/res/values/strings.xml
+++ b/Android/App/app/src/main/res/values/strings.xml
@@ -67,6 +67,6 @@
   <string name="empty_surveys_message">Add a survey using\nthe big pink button</string>
   <string name="welcome_user">Welcome %1$s</string>
   <string name="anonymous">stranger</string>
-  <string name="title_activity_launcher">PathogenTrackerLauncher</string>
+  <string name="title_activity_launcher">PathogenTracker</string>
 
 </resources>
