--- a/Android/App/app/src/main/res/values/strings.xml
+++ b/Android/App/app/src/main/res/values/strings.xml
@@ -109,5 +109,10 @@
   <string name="hint_location_collected">Location Collected</string>
   <string name="encrpytion_rationale">Please ensure your \nsmartphone device is encrypted if mandated by your organization</string>
   <string name="done">Done</string>
+  <string name="welcome_to_pathogentracker">Welcome to PathogenTracker</string>
+  <string name="logo">Logo</string>
+  <string name="error_login_no_network">Please enable a network connection and try signing in again.</string>
+  <string name="login_error_sign_in">This app requires a signed-in user, please sign in.</string>
+  <string name="login_error_unknown">We encountered an unknown error when signing in sorry :(</string>
 
 </resources>
