--- a/Android/App/app/src/main/res/values/strings.xml
+++ b/Android/App/app/src/main/res/values/strings.xml
@@ -111,10 +111,11 @@
   <string name="done">Done</string>
   <string name="welcome_to_pathogentracker">Welcome to PathogenTracker</string>
   <string name="logo">Logo</string>
-  <string name="error_login_no_network">Please enable a network connection and try signing in again.</string>
+  <string name="login_error_no_network">Please enable a network connection and try signing in again.</string>
   <string name="login_error_sign_in">This app requires a signed-in user, please sign in.</string>
   <string name="login_error_unknown">We encountered an unknown error when signing in sorry :(</string>
   <string name="thanks_for_loc_perm">Thanks for granting permission, tap the location field to get the current location</string>
-  <string name="error_loc_retrieval">Unable to determine location, please try again</string>
+  <string name="loc_error_no_location">Unable to determine location, please try again</string>
+  <string name="error_permissions_denied">This app needs the denied permissions to function properly, you will be asked to grant them again when required.</string>
 
 </resources>
